# Adipa-pad-Clasifier

./: README.md  dataset_turnos.json  extract_dataset.py  requirements-dev.txt
adipa-pap/: .dockerignore  .env.example  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt  writeup.md
adipa-pap/.github/workflows/: ci.yml  docker-build.yml  model-eval.yml
adipa-pap/adipa-pap/src/training/: train_baseline.py
adipa-pap/data/processed/: dataset_turnos.csv  dataset_turnos.json
adipa-pap/docs/: api.md
adipa-pap/src/: models.py
adipa-pap/src/api/: main.py
adipa-pap/src/evaluation/: evaluate.py
adipa-pap/src/inference/: classifier.py
adipa-pap/tests/: conftest.py
adipa-pap/tests/integration/: test_api_classify.py  test_api_health.py
adipa-pap/tests/unit/: test_pydantic_models.py
